--- a/assets/sass/variables-site/_typography.scss
+++ b/assets/sass/variables-site/_typography.scss
@@ -1,7 +1,8 @@
-$font__main: 'Rubik', sans-serif;
+$font__main: 'Source Sans Pro', sans-serif;
+$font__headings: 'Oxygen', sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.6;
 $font__line-height-pre: 1.6;
 
-@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Oxygen:400,700|Source+Sans+Pro:400,700');
