changing bmi layout mobile

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -138,9 +138,21 @@
                     }
                     label {
                         margin: 0 10px 0 0;
+                        display: block;
+                        width: 100%;
+                        @media screen and (min-width: $tabwidth){
+                            display: inline-block;
+                            width: auto;
+                        }
                     }
                     input {
                         margin: 0 10px 0 0;
+                        display: block;
+                        width: 100%;
+                        @media screen and (min-width: $tabwidth){
+                            display: inline-block;
+                            width: auto;
+                        }
                     }
                 }
             }
