--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -69,13 +69,7 @@ h1,h2,h3,h4,h5,h6 {
 			margin: 0;
 			font-size: inherit;
 			padding: 0;
-			list-style-type: none;
-			text-indent: -14px;
-			&:before {
-				content: "\25A0";
-				color: $color__text-main;
-				margin-right: 5px;
-			}
+			list-style-type: disc;
 			a {
 				cursor: pointer;
 				&:hover {
