--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -32,14 +32,21 @@
 
                 }
                 .email {
-                    font-size: 16px;
+                    a {
+                        color: inherit;
+                        font-size: 16px;
+                        text-decoration: none;
+                    }
                 }
                 .phone {
-                    font-size: 16px;
-                    @media screen and (min-width: $tabwidth){
-                        font-size: 25px;
+                    a {
+                        color: inherit;
+                        text-decoration: none;
+                        font-size: 16px;
+                        @media screen and (min-width: $tabwidth){
+                            font-size: 25px;
+                        }
                     }
-
                 }
             }
             >.col-2 {
