--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -30,9 +30,11 @@
                     font-size: 16px;
                     margin: 15px 0 0 0;
                     @media screen and (min-width: $midwidth){
+                        font-size: 20px;
+                    }
+                    @media screen and (min-width: 1300px){
                         font-size: 25px;
                     }
-
                 }
                 .email {
                     a {
